--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test": "mocha --timeout 20000 --require ts-node/register src/**/*.spec.ts",
     "test:debug": "tsx test.ts",
     "test:watch": "mocha -w --timeout 20000 --require ts-node/register src/**/*.spec.ts",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "version:patch": "npm --no-git-tag-version version patch",
+    "version:minor": "npm --no-git-tag-version version minor",
+    "version:major": "npm --no-git-tag-version version major"
   },
   "keywords": [
     "api",
