update github workflow to utilize OIDC

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,9 +59,7 @@ jobs:
           echo "Version verification successful: $PACKAGE_VERSION"
       
       - name: Publish to npm
-        run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish
       
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
