--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,12 +2,12 @@ name: Publish package to npm
 
 on:
   push:
-    tags:
-      - 'v*.*.*'  # Matches version tags like v1.0.0, v2.1.3, etc.
+    branches:
+      - master
 
 permissions:
   id-token: write  # Required for OIDC
-  contents: read
+  contents: write  # Required to commit version bump
 
 jobs:
   publish:
@@ -18,7 +18,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch all history for tags
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -26,6 +27,11 @@ jobs:
           node-version: '24.x'
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+      
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
       
       - name: Install dependencies
         run: npm ci
@@ -36,30 +42,21 @@ jobs:
       - name: Build project
         run: npm run build
       
-      - name: Extract version from tag
-        id: get_version
+      - name: Bump version (patch)
         run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "Extracted version: $VERSION"
+          npm version patch --no-git-tag-version
+          echo "New version: $(node -p "require('./package.json').version")"
       
-      - name: Update package.json version
+      - name: Commit version bump
         run: |
-          npm version ${{ steps.get_version.outputs.version }} --no-git-tag-version
-          echo "Updated package.json version to ${{ steps.get_version.outputs.version }}"
-      
-      - name: Verify package.json version matches tag
-        run: |
-          PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          TAG_VERSION="${{ steps.get_version.outputs.version }}"
-          if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
-            echo "Error: package.json version ($PACKAGE_VERSION) does not match tag version ($TAG_VERSION)"
-            exit 1
-          fi
-          echo "Version verification successful: $PACKAGE_VERSION"
+          git add package.json package-lock.json
+          git commit -m "chore: bump version to $(node -p "require('./package.json').version") [skip ci]" || exit 0
+          git push || exit 0
       
       - name: Publish to npm
         run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       
       # - name: Create Release
       #   id: create_release
